Corrected stars spacing

--- a/src/styles/blocks/main-content.css
+++ b/src/styles/blocks/main-content.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
-  width: 96px;
-  height: 116px;
+  width: 100px;
+  height: 94px;
 }
